home spacing issue

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -112,7 +112,7 @@ form img {
 	max-width: 940px;
 	li {
 		display: inline-block;
-		margin: 1px;
+		margin: 4px;
 		text-align: left;
 		position: relative;
 		padding:0px;
